--- a/app/views/work_orders/index_receive.html.haml
+++ b/app/views/work_orders/index_receive.html.haml
@@ -29,18 +29,22 @@
       %thead
         %tr
           %th= model_class.human_attribute_name(:hilt_no)
+          %th= model_class.human_attribute_name(:work_order_items)
           %th= model_class.human_attribute_name(:received)
           %th= model_class.human_attribute_name(:received_at)
           %th= model_class.human_attribute_name(:received_by_id)
           %th
       %tbody
         - @work_orders.each do |work_order|
-          %tr{href: work_order_path(work_order)}
-            %td= work_order.hilt_no
-            %td= t(work_order.received.to_s)
-            %td= work_order.received_at
-            %td= work_order.received_by_name
-            %td
+          - work_order.work_order_items.each_with_index do |work_order_item, index|
+            %tr{href: work_order_path(work_order)}
+              - if index == 0
+                %td{rowspan: work_order.work_order_items.size}= work_order.hilt_no
+              %td= work_order_item.serial_no
+              - if index == 0
+                %td= t(work_order.received.to_s)
+                %td= work_order.received_at
+                %td= work_order.received_by_name
 .row-fluid
   .span12
     = paginate @work_orders
